fix ts config err

--- a/@app/client/tsconfig.json
+++ b/@app/client/tsconfig.json
@@ -1,5 +1,8 @@
 {
-  "exclude": "../../tsconfig.json",
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "composite": true
+  },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
