--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "ui-lib",
+  "name": "@demo/ui-lib",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "module": "./dist/ui-lib.js",
+  "types": "./dist/main.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "dev": "vite build --watch",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@demo/tailwind-config": "workspace:^",
+    "@types/node": "^20.8.7",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-dts": "^3.6.0",
     "vue-tsc": "^1.8.5"
   }
 }
