install ui-lib to app

--- a/@app/client/package.json
+++ b/@app/client/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@demo/tailwind-config": "workspace:^",
+    "@demo/ui-lib": "workspace:^",
     "@vitejs/plugin-vue": "^4.2.3",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
